Getting vcs' to populate.  Removing old code.

--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -53,7 +53,7 @@
         </button>
         <div>
             <span class="label label-success" ng-repeat="pillar in pillars">{{pillar}}</span>
-            <span class="label label-default" ng-repeat="vc in vcs">{{vc}}</span>
+            <span class="label label-default" ng-repeat="vc in vcs">{{vc.name}}</span>
         </div>
     </section>
 
