Change selection, get ready for populate method.

--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -52,8 +52,8 @@
             x-pillars="comment.pillars">Assign Valued Components
         </button>
         <div>
-            <span class="label label-success" ng-repeat="pillar in pillars">{{pillar}}</span>
-            <span class="label label-default" ng-repeat="vc in vcs">{{vc.name}}</span>
+            <span class="label label-success" ng-repeat="pillar in comment.pillars">{{pillar}}</span>
+            <span class="label label-default" ng-repeat="vc in comment.valuedComponents">{{vc}}</span>
         </div>
     </section>
 
