--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2079,6 +2079,7 @@ $sidenav-color: $link-color;
 		a {
 			display: block;
 			padding: 1rem 1.5rem;
+			font-size: 1.6rem;
 			font-weight: bold;
 			color: #000;
 			
@@ -2087,7 +2088,7 @@ $sidenav-color: $link-color;
 			}
 			
 			.glyphicon {
-				margin-top: 0.2rem;
+				margin-top: 0.4rem;
 				margin-right: 1rem;
 				margin-left: -0.2rem;
 				font-size: 1rem;
@@ -2306,7 +2307,6 @@ $sidenav-color: $link-color;
 }
 
 .btn-primary {
-	padding-top: 0.7rem;
 	background: $corp-blue;
 	&:hover  { background: $corp-blue; }
 	&:active { background: $corp-blue; }
@@ -2899,6 +2899,12 @@ $table-footer-bg: #FFF;
 
 .pagination {
 	margin: 0;
+}
+
+.tag-list {
+	.label {
+		margin-right: 0.5rem;
+	}
 }
 
 
@@ -3588,7 +3594,7 @@ section.project-info {
 	}
 
 	.date-col {
-		width: 15rem;
+		width: 14rem;
 		font-size: 1.2rem;
 
 		label {
@@ -3606,11 +3612,14 @@ section.project-info {
 	}
 
 	.phase-action-col {
-		width: 15rem;
+		width: 13rem;
+		padding-right: 0;
 
-		.btn {
+		.label, .btn {
 			display: block;
 			width: 100%;
+			height: 2rem;
+			text-transform: uppercase;
 		}
 	}
 
@@ -3623,7 +3632,7 @@ section.project-info {
 		text-align: center;
 
 		.btn {
-			margin-top: 0.8rem;
+			margin-top: 0.45rem;
 		}
 	}
 }
@@ -3632,6 +3641,14 @@ section.project-info {
 	margin-left: -1.5rem;
 	margin-right: -1.5rem;
 	margin-bottom: 0;
+}
+
+@media (min-width: 1200px) {
+	.project-schedule-view {
+		.date-col {
+			width: 18rem;
+		}
+	}
 }
 
 
@@ -3757,6 +3774,12 @@ section.project-info {
 		}
 		
 		&:last-child { padding-bottom: 0; }
+	}
+}
+
+.pillar-vcs {
+	.tag-list + .btn {
+		margin-top: 1rem;
 	}
 }
 
@@ -4108,6 +4131,8 @@ section.project-info {
 	.comment-status-btns {
 		.btn {
 			min-width: 10rem;
+			padding-top: 0.8rem;
+			padding-bottom: 0.8rem;
 			text-transform: uppercase;
 		}
 		
