--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -13,49 +13,49 @@
 			</div>
 		</div>
 
-		<div class="panel-group">
+		<div class="panel-group" id="projectPhases" role="tablist" aria-multiselectable="false">
+			
 			<!-- BEGIN: PROJECT PHASE CONTAINER -->
-			<div class="panel panel-default accordion" id="phaseGroup" role="tablist" aria-multiselectable="true"  ng-repeat="phase in rPhases | orderBy:'order'">
-				<div class="panel-heading" role="tab" id="phaseOne">
-					<a class="clearfix" role="button" data-toggle="collapse" href="#{{phase.code}}" aria-expanded="true" aria-controls="{{phase.code}}">
+			<div class="panel panel-default accordion" id="phaseGroup" ng-repeat="phase in rPhases | orderBy:'order'">
+				<div class="panel-heading" role="tab">
+					<a class="clearfix" role="button" data-toggle="collapse" data-parent="#projectPhases" href="#{{phase.code}}" aria-expanded="true" aria-controls="{{phase.code}}">
 						<span class="glyphicon glyphicon-triangle-right pull-left"></span>
 						<span class="glyphicon glyphicon-triangle-bottom pull-left"></span>
-						<span class="pull-left">{{phase.name}}</span>
-						<span class="label label-success pull-right hidden" ng-if="phase.status === 'Complete'">Completed</span>
+						<span class="pull-left">{{phase.name}} {{phase.status}}</span>
+						<span class="label label-success pull-right" ng-if="phase.status === 'Complete'">Completed &nbsp;-&nbsp; {{phase.dateCompleted | amDateFormat:'MMM DD, YYYY'}}</span>
 						<span class="pull-right hidden">&nbsp;Estimated: {{phase.dateStartedEst | date : format : timezone}} / {{phase.dateCompletedEst | date : format : timezone}}</span>
 						<span class="pull-right hidden">&nbsp;Actual: {{phase.dateStarted | date : format : timezone}} / {{phase.dateCompleted | date : format : timezone}}</span>
 					</a>
 				</div>
-				<div id="{{phase.code}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="{{phase.code}}">
+				<div id="{{phase.code}}" class="panel-collapse collapse" ng-class="{'in': phase.status === 'In Progress' }" role="tabpanel" aria-labelledby="{{phase.code}}">
 					<div class="panel-body">
 						<div ng-if="project.userCan.editSchedule" class="button-bar clearfix">
-							<button ng-if="phase.code !== 'pre-submission'"
-									ng-click="popluatePhaseDropdown(phase)"
-									class="btn btn-default btn-sm"
-									data-toggle="modal"
-									data-target="#addMilestoneModal"><span class="glyphicon glyphicon-plus"></span><span>Add Milestone</span></button>
-							<button ng-if="phase.code !== 'pre-submission'"
-									class="btn btn-default btn-sm hidden"
-									data-toggle="modal"
-									data-target="#addCommentSessionModal">Add Comment Period</button>
-							<button class="btn btn-default btn-sm pull-right"
-									ng-click="completeCurrentPhase(project)"
-									ng-if="canCompletePhase(phase)"
-									data-toggle="modal"
-									data-target="#completePhaseModal">Complete Phase</button>
-							<button class="btn btn-default btn-sm pull-right"
-									ng-click="startNextPhase(project)"
-									ng-if="isNextPhase(phase._id)"
-									data-toggle="modal"
-									data-target="#completePhaseModal">Start Phase</button>
-							<div class="pull-right hidden">
+							<div class="pull-left">
+								<button class="btn btn-default btn-sm"
+										ng-if="phase.code !== 'pre-submission'"
+										ng-click="popluatePhaseDropdown(phase)"
+										data-toggle="modal"
+										data-target="#addMilestoneModal"><span class="glyphicon glyphicon-plus"></span><span>Add Milestone</span></button>
+								<button class="btn btn-default btn-sm hidden"
+										ng-if="phase.code !== 'pre-submission'"
+										data-toggle="modal"
+										data-target="#addCommentSessionModal">Add Comment Period</button>
+							</div>
+							<div class="pull-right">
 								<button class="btn btn-default btn-sm"
 									ng-click="selectPhaseForEdit(phase)"
 									data-toggle="modal"
 									data-target="#editPhaseDetail">Edit Phase Detail</button>
-							</div>
-							<div ng-if="phase.status === 'Complete'" class=" pull-right">
-								<button class="btn btn-default btn-sm" disabled="disabled">Phase Completed</button>
+								<button class="btn btn-primary btn-sm"
+										ng-click="completeCurrentPhase(project)"
+										ng-if="canCompletePhase(phase)"
+										data-toggle="modal"
+										data-target="#completePhaseModal">Complete Phase</button>
+								<button class="btn btn-primary btn-sm"
+										ng-click="startNextPhase(project)"
+										ng-if="isNextPhase(phase._id)"
+										data-toggle="modal"
+										data-target="#completePhaseModal">Start Phase</button>
 							</div>
 						</div>
 						<div class="phase-schedule">
@@ -82,13 +82,14 @@
 										</td>
 										<!-- <td>-Template Link-</tdf> -->
 										<td class="phase-action-col">
+											<span class="label label-success" ng-if="row.status === 'Complete'">Completed</span>
 											<div ng-if="project.userCan.editSchedule">
-												<button class="btn btn-default btn-sm"
+												<button class="btn btn-primary btn-xs"
 														ng-if="row.status === 'Not Started'"
 														ng-click="startMilestone(row._id)">Start Milestone</button>
-												<button class="btn btn-success btn-default btn-sm"
+												<button class="btn btn-primary btn-xs"
 														ng-if="row.status === 'In Progress'"
-														ng-click="completeMilestone(row._id)">Complete Milestone</button>
+														ng-click="completeMilestone(row._id)">Mark Complete</button>
 											</div>
 										</td>
 										<td class="actions-col action-x2" ng-if="project.userCan.editSchedule">
