Change "Artifact" in client views to "Content"

--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -1,6 +1,6 @@
 <div class="edit-artifact-view">
 	<div class="view-title-container">
-		<h1>Edit Artifact &nbsp; &rsaquo; &nbsp; {{artifact.name}}</h1>
+		<h1>Edit Content &nbsp; &rsaquo; &nbsp; {{artifact.name}}</h1>
 	</div>
 
 	<div class="view-body-container">
@@ -42,7 +42,7 @@
 				<a class="btn btn-default" ng-click="submit()">Submit for {{buttons.next}}</a>
 			</div>
 		</div>
-		
+
 	</div>
 
 </div>
