--- a/modules/artifacts/client/views/config/artifact-edit.html
+++ b/modules/artifacts/client/views/config/artifact-edit.html
@@ -1,5 +1,5 @@
 <h1 class="page-title no-lower-margin">
-	Add / Edit Artifact Type
+	Add / Edit Content Type
 </h1>
 
 <form name="artifactForm" ng-submit="save(artifactForm.$valid)" novalidate>
