--- a/modules/artifacts/client/views/config/artifact-list.html
+++ b/modules/artifacts/client/views/config/artifact-list.html
@@ -1,11 +1,11 @@
 <h1 class="page-title no-lower-margin">
-	Artifact Library
+	Content Library
 </h1>
 
 <div class="row">
 	<div class="col-sm-12 text-right">
 		<a class="btn btn-xs btn-link" ui-sref="admin.artifact.create()">
-			+ Add New Artifact Type
+			+ Add New Content Type
 		</a>
 		<show-filter x-toggle-filter="toggleFilter"></show-filter>
 	</div>
