--- a/modules/documents/client/views/partials/document-upload-classify.html
+++ b/modules/documents/client/views/partials/document-upload-classify.html
@@ -13,7 +13,7 @@
 
 	<div class="row">
 		<div class="col-sm-4">
-		
+
 		</div>
 	</div>
 
@@ -27,7 +27,7 @@
 			<tr>
 				<td width="34%" style="padding-top: 5px;">
 					<div class="form-group">
-						<label class="control-label">Artifact</label>
+						<label class="control-label">Content</label>
 						<select class="form-control"
 								ng-options="stype as stype.name for stype in docUpload.artifacts"
 								ng-model="docUpload.selectedArtifact"></select>
