--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -23,7 +23,7 @@
 					</select>
 				</div>
 				<div class="form-group">
-					<label class="control-label">Artifact for Review</label>
+					<label class="control-label">Content for Review</label>
 					<select ng-model="period.artifact" class="form-control" ng-options="artifact as artifact.name for artifact in artifacts">
 					</select>
 				</div>
