--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -24,7 +24,7 @@
 					<td title="'Phase'" filter="{ phaseName: 'select'}" filter-data="s.phaseArray" sortable="'phaseName'">
 						{{p.phaseName}}
 					</td>
-					<td title="'Artifact'" filter="{ artifactName: 'select'}" filter-data="s.artifactArray" sortable="'artifactName'">
+					<td title="'Content'" filter="{ artifactName: 'select'}" filter-data="s.artifactArray" sortable="'artifactName'">
 						{{p.artifactName}}
 					</td>
 					<td title="'Version'" filter="{ artifactVersion: 'select'}" filter-data="s.versionArray" sortable="'artifactVersion'">
