--- a/modules/templates/client/views/template-edit.html
+++ b/modules/templates/client/views/template-edit.html
@@ -5,7 +5,7 @@
 	</div>
 
 	<div class="view-body-container">
-		
+
 		<div class="row hidden">
 			<div class="col-sm-12 text-right">
 				<a class="btn btn-xs btn-link" ui-sref="admin.template.list">Cancel</a>
@@ -136,7 +136,7 @@
 							<option>Html</option>
 							<option>Auto</option>
 							<option>List</option>
-							<option>Artifact</option>
+							<option>Content</option>
 							<option>Document List</option>
 						</select>
 					</div>
@@ -156,7 +156,7 @@
 				</div>
 
 			</div>
-			
+
 			<div class="panel-footer" ng-if="$last">
 				<div class="row">
 					<div class="col-sm-12">
@@ -164,7 +164,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 		</div>
 
 
@@ -176,5 +176,5 @@
 		</div>
 
 	</div><!-- / VIEW BODY CONTAINER -->
-	
+
 </div>
