--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -9,7 +9,7 @@
     <div class="col-sm-12">
       <div class="panel panel-default">
         <div class="panel-heading clearfix">
-          <h2 class="pull-left">Main Artifact Document</h2>
+          <h2 class="pull-left">Main Document</h2>
           <div class="pull-right"></div>
         </div>
         <div class="panel-body">
