--- a/modules/artifacts/client/views/partial.artifact.document.html
+++ b/modules/artifacts/client/views/partial.artifact.document.html
@@ -1,7 +1,7 @@
 <div class="row">
 
   <div class="col-sm-12">
-    <h4>Main Artifact Document</h4>
+    <h4>Main Document</h4>
     <div class="panel panel-default">
       <div class="panel-body">
         <div class="file-horiz">
