--- a/modules/templates/client/views/template-artifact-editor.html
+++ b/modules/templates/client/views/template-artifact-editor.html
@@ -2,7 +2,7 @@
     <div class="document-block-header clearfix">
 	    <h4 class="pull-left">{{ ::title }}</h4>
         <a ng-if="editable" href x-artifact-chooser class="btn btn-xs btn-link pull-right" x-artifact="artifact" x-project="project">
-			+/- Choose Artifact
+			+/- Choose Content
 		</a>
 	</div>
     <div class="panel panel-default">
