--- a/modules/templates/client/views/template-view.html
+++ b/modules/templates/client/views/template-view.html
@@ -1,6 +1,7 @@
-<h1 class="page-title no-lower-margin">
-	View Template: {{template.documentType}}
-</h1>
+
+<div class="view-title-container">
+	<h1 class="view-title">View Template: {{template.documentType}}</h1>
+</div>
 <div class="row">
 	<div class="col-sm-12 text-right">
 		<a class="btn btn-xs btn-link" ui-sref="admin.template.list">Cancel</a>
