--- a/modules/templates/client/views/template-test.html
+++ b/modules/templates/client/views/template-test.html
@@ -1,54 +1,63 @@
-<h1 class="page-title no-lower-margin">
-	Test Template for {{template.documentType}} version {{template.versionNumber}}
-</h1>
 
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.template.list">Cancel</a>
+<div class="template-view">
+	
+	<div class="view-title-container">
+		<h1 class="view-title">{{template.documentType}} version {{template.versionNumber}}</h1>
+
+		<!-- TODO: Need a mechanism to get back to the templates list quickly -->
+		<a class="btn btn-xs btn-link hidden" ui-sref="admin.template.list">Cancel</a>
 	</div>
-</div>
 
-<div class="row" ng-class="{'edit-outlines': toggleBlue}">
-	<div class="col-sm-3">
-		<div class="form-group" ng-init="toggleBlue = true">
-			<a href ng-click="toggleBlue = !toggleBlue">
+	<div class="view-body-container">
+		
+		<div class="button-bar" ng-init="toggleBlue = true">
+			<button class="btn btn-default btn-sm" ng-click="toggleBlue = !toggleBlue">
 				<span ng-show="toggleBlue">Hide Outlines</span>
 				<span ng-show="!toggleBlue">Show Outlines</span>
-			</a>
+			</button>
+			<button class="btn btn-default btn-sm" onclick="window.print()">
+				<span class="glyphicon glyphicon-print"></span>
+				<span>Print</span>
+			</button>
 		</div>
 
-		<div class="form-group" ng-if="allsections.length > 0"><hr>
-			<label class="control-label">Go To Section</label>
-			<ul class="task-list list-unstyled">
-				<li ng-repeat="section in allsections"><a du-smooth-scroll href="#{{ section.name }}">{{ section.label }}</a></li>
-			</ul>
-		</div>
-
-		<div class="form-group" ng-if="repeatsections.length > 0"><hr>
-			<label class="control-label">Append New in Section</label>
-			<ul class="task-list list-unstyled">
-				<li ng-repeat="section in repeatsections"><a href ng-click="append(section.name)">{{ section.label }}</a></li>
-			</ul>
-		</div>
-
-		<div class="form-group"><hr>
-			<label class="control-label">Data Set</label>
-			<pre class="small">{{dataset | json}}</pre>
-		</div>
-	</div>
-	<div class="col-sm-9">
-		<tmpl-template-render x-template="template" x-mode="'edit'" x-project="project" x-document="dataset"></tmpl-template-render>
-	</div>
-</div>
-
-<div class="panel panel-default">
-	<div class="panel-body">
-		<div class="row">
-
-			<div class="col-sm-12 text-right">
-				<a class="btn btn-default" ui-sref="admin.template.list">Cancel</a>
+		<div class="template-container" ng-class="{'edit-outlines': toggleBlue}">
+			
+			<div class="data-set-col">
+				<div class="form-group" ng-if="allsections.length > 0"><hr>
+					<label class="control-label">Go To Section</label>
+					<ul class="task-list list-unstyled">
+						<li ng-repeat="section in allsections"><a du-smooth-scroll href="#{{ section.name }}">{{ section.label }}</a></li>
+					</ul>
+				</div>
+				<div class="form-group" ng-if="repeatsections.length > 0"><hr>
+					<label class="control-label">Append New in Section</label>
+					<ul class="task-list list-unstyled">
+						<li ng-repeat="section in repeatsections"><a href ng-click="append(section.name)">{{ section.label }}</a></li>
+					</ul>
+				</div>
+				<div class="form-group"><hr>
+					<label class="control-label">Data Set</label>
+					<pre class="small">{{dataset | json}}</pre>
+				</div>
 			</div>
 
+			<tmpl-template-render x-template="template" x-mode="'edit'" x-project="project" x-document="dataset"></tmpl-template-render>
+
 		</div>
+
+		<!--
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-sm-12 text-right">
+						<a class="btn btn-default" ui-sref="admin.template.list">Cancel</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		-->
+
 	</div>
+
 </div>
