Adjust CEAA Link to be clickable, change import data to remove NA from link.

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -57,8 +57,8 @@
 			</div>
 			<div class="col-sm-4 col-md-4" ng-if="project.CEAALink">
 				<div class="detail-row">
-					<label>CEAALink</label>
-					<span class="value">{{project.CEAALink}}</span>
+					<label>CEAA Link</label>
+					<span class="value"><a href="{{ ::project.CEAALink }}">{{ ::project.CEAALink }}</a></span>
 				</div>
 			</div>
 		</div>
