--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -57,7 +57,7 @@
 			</div>
 			<div class="col-sm-4 col-md-4" ng-if="project.CEAALink">
 				<div class="detail-row">
-					<label>CEAA Link</label>
+					<label>CEAA URL</label>
 					<span class="value"><a href="{{ ::project.CEAALink }}">{{ ::project.CEAALink }}</a></span>
 				</div>
 			</div>
